add scan-qr decode
